--- a/content/news/2022/03/11/deref.adoc
+++ b/content/news/2022/03/11/deref.adoc
@@ -11,9 +11,9 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 The https://www.surveymonkey.com/r/clojure2022[State of Clojure 2022 Survey] is closing today, so if you haven't filled it out yet, please do. We have some new questions this year and I think we'll get some interesting feedback, but only if you complete it!
 
-This week we added https://github.com/sponsors/behrica[Carsten Behring] to the Nubank/Cognitect sponsorship rolls - Carsten has been working on scicloj.ml and clj-py-r-template most lately, so consider sponsorship if you're using those!
+This week we added https://github.com/sponsors/behrica[Carsten Behring] to the Nubank/Cognitect sponsorship rolls - Carsten has been working on https://github.com/scicloj/scicloj.ml[scicloj.ml] and https://github.com/behrica/clj-py-r-template[clj-py-r-template] most lately, so consider sponsorship if you're using those!
 
-Also, a big congrats to Clojure users Ardoq[https://www.ardoq.com/] on their https://techcrunch.com/2022/03/09/ardoq-125m-enterprise-architecture/[$125M financing round]!
+Also, a big congrats to Clojure users https://www.ardoq.com/[Ardoq] on their https://techcrunch.com/2022/03/09/ardoq-125m-enterprise-architecture/[$125M financing round]!
 
 == Podcasts and videos
 
