Add cljdoc to community resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -43,6 +43,7 @@ Community:
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
+* https://cljdoc.org/[cljdoc] - a website building & hosting documentation for Clojure/Script libraries
 * http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://guide.clojure.style/[Clojure Style Guide]
