Add Mobot to the list of companies using Clojure
Mobot tests mobile apps using mechanical robots.  The majority of our system is written in Clojure.

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -283,6 +283,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Minoro
 * Mixpanel
 * MixRadio
+* Mobot
 * modelogiq
 * Moleque de Ideias
 * Motiva AI
