--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -53,7 +53,16 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
-== Development Release: none
+== Development Release: 1.11.1-rc1 (Apr 1, 2022)
+
+* Clojure 1.11.1-rc1
+* https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.11.1*[Clojure 1.1
+1.1 pre-release builds]
+* <<devchangelog#,Dev changelog>>
+* Dependencies:
+** `org.clojure/spec.alpha {:mvn/version "0.3.218"}`
+** `org.clojure/core.specs.alpha {:mvn/version "0.2.62"}`
+* Requirements: Java 8 or higher (recommended: Java 8, Java 11, Java 17)
 
 == Older Releases
 
