--- a/content/news/2022/05/13/deref.adoc
+++ b/content/news/2022/05/13/deref.adoc
@@ -15,6 +15,7 @@ The https://stackoverflow.blog/2022/05/11/stack-overflow-2022-developer-survey-i
 
 * https://clojurescriptpodcast.com/[E70 Scrintal with Furkan] - ClojureStream Podcast
 * https://anchor.fm/lostinlambduhhs/episodes/djblue-Open-the-Portal-with-Chris-B-e1ic0a7[:djblue (Open the Portal with Chris B)] - Lost in Lambduhhs
+* https://www.youtube.com/watch?v=CwpV_TNn-3s[The Clouncil Season 1, Episode 4]
 * https://www.youtube.com/watch?v=Ajg9mfYcaDs[STT e46: Learn Lisp!] - Steve Yegge
 * https://www.youtube.com/watch?v=PR4g-gPFSOw[Crossbeam digs in on Clojure]
 * https://www.youtube.com/watch?v=_0ho_8pg3Wk[Common Beginner Problems - Clojure] - Attila EGRI-NAGY
